# first_tryout

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  critical.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tests/: test_critical.py
