[tool.poetry]
name = "nyc-taxi-pipeline"
version = "0.1.0"
description = "Data pipeline for NYC taxi trip data"
authors = ["Stephen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wget = "^3.2"
pyarrow = "^19.0.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.9"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^25.1.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
